styles.css
*, *::before, *::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    background-color: #000000;
    color: #c7c7c7;
}

.header {
    display: flex;
}

.bio h1 {
    margin: 0px;
}

#headshot {
    width: 200px;
    height: 200px;
    margin-right: 20px;
}

h1, h2, h3 {
    margin-top: 1.2em;
    margin-bottom: 0.4em;
}

h2, h3 {
    border-bottom: 1px solid #444;
    padding-bottom: 5px;
}

ul {
    padding: 0;
}

li {
   list-style-type: none; 
}

a {
    color: rgb(157, 190, 255);
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

@media (max-width: 980px) {
    body {
        font-size: 1.1em;
    }
}

.post_body {
    line-height: 1.7;
}

.post_body p {
    margin-bottom: 1.2em;
}

